Bug 162087 - Database-range keywords are not detected if Calc is forced to English function names
Summary: Database-range keywords are not detected if Calc is forced to English functio...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:25.2.0 target:24.8.0.2 target:...
Keywords:
Depends on:
Blocks: Cell-Name
  Show dependency treegraph
 
Reported: 2024-07-18 12:44 UTC by Regina Henschel
Modified: 2024-07-27 01:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Document for experiments (16.32 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-07-18 12:44 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2024-07-18 12:44:16 UTC
Created attachment 195372 [details]
Document for experiments

Open attached document.
Goto Tools > Options > Calc > Formula.
Enable option "Use English function names". OK.
Enter the formulas as described on the sheet.

Notice: The formulas produce errors.

Close the document without saving.
Open the document.
Goto Tools > Options > Calc > Formula.
Disable option "Use English function names". OK.
Enter the formulas as described on the sheet.

Notice: The formulas work.

The file has a database-range named "myData" that has the options "Contains column labels" and "Contains totals row" enable. For such database range you can use
myData[[#Data]] to address the cell range without label row or totals row
myData[[#Headers]] to address only the label row
myData[[#Totals]] to address only the totals row
myData[[#All]] to address the entire database range

If the option "Use English Function names" is on, the keywords #Data, #Headers, #Totals and #All are not detected, what you can see on the fact, that they appear in lower case in you failing cases.
Comment 1 m_a_riosv 2024-07-18 21:47:21 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d5d4e1334957abc29c5c4f543a8cd15a5aaf8748
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

And if you enter =myData[[#data]] (lower case) with the option for English function names disabled, it changes to =myData[[#Data]]
Comment 2 Commit Notification 2024-07-24 23:34:47 UTC Comment hidden (off-topic)
Comment 3 Eike Rathke (retired, only occasionally showing up) 2024-07-24 23:48:22 UTC Comment hidden (off-topic)
Comment 4 Commit Notification 2024-07-25 21:27:32 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc9486f2443fa52588b625c0a2a288bff56a7a45

Resolves: tdf#162087 FormulaCompiler::OpCodeMap::maHashMap must be uppercase

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2024-07-25 21:30:32 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/171031 for 24-8
https://gerrit.libreoffice.org/c/core/+/171030 for 24-2
Comment 6 Commit Notification 2024-07-26 13:40:43 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8648ca116ccfa47211b711905ec13809431a7985

Resolves: tdf#162087 FormulaCompiler::OpCodeMap::maHashMap must be uppercase

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Regina Henschel 2024-07-26 14:14:56 UTC
Verified in Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dc9486f2443fa52588b625c0a2a288bff56a7a45
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

Thank you Eike for fixing it. And so quickly :)
Comment 8 Commit Notification 2024-07-26 16:39:08 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7274fcf957314d4c3fffb02fb8bd156835df0510

tdf#162087: sc_uicalc: Add unittest

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-07-27 01:20:22 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/85d800ccc30b28c4c5a310aee0ae6b189427ac03

Resolves: tdf#162087 FormulaCompiler::OpCodeMap::maHashMap must be uppercase

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.