Resolves: tdf#162087 TableRef item specifier may occur standalone

This is what
https://learn.microsoft.com/en-us/openspecs/office_standards/ms-xlsx/3d025add-118d-4413-9856-ab65712ec1b0
specifies as  keyword  in

 intra-table-reference = spaced-lbracket inner-reference spaced-rbracket / keyword / ("[" [simple-column-name] "]")

with

 keyword = "[#All]" / "[#Data]" / "[#Headers]" / "[#Totals]" / "[#This Row]"

Change-Id: I52b200aad41d53a49e662d6238576f6f4f0deb37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170986
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins